[package]
name = "warp-demo"
version = "0.1.0"
authors = ["R. Mark Volkmann <r.mark.volkmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1.1.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
warp = "0.3.0"
